syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

import "models.proto";

package requests;

option java_package = "ar.edu.itba.pod.grpc.requests";
option java_multiple_files = true;

service BookingRequestsService{

  /*
  5 m√©todos:
  -attractions
  -availability
  -book
  -confirm
  -cancel
  */

  rpc GetAttractionsRequest(google.protobuf.Empty) returns(stream RidesRequestModel);

  rpc BookingRequest(BookRequestModel) returns (google.protobuf.Int32Value);

}